media-tools/heimdall/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: heimdall
  namespace: media-tools
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
        name: heimdall
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-type
                operator: In
                values:
                - worker
      containers:
      - name: heimdall
        image: linuxserver/heimdall:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 120
          timeoutSeconds: 60
        volumeMounts:
        - name: heimdall-config
          mountPath: /config
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
        - name: heimdall-config
          persistentVolumeClaim:
            claimName: heimdall
      automountServiceAccountToken: false
