media-tools/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: heimdall-service
  name: heimdall-service
  namespace: media-tools
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: web
  selector:
    app: heimdall
