media-tools/heimdall/ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: heimdall
  namespace: media-tools
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`heimdall.ucdialplans.com`) 
    kind: Rule
    services:
    - name: heimdall-service
      port: 80
    middlewares:
    - name: traefik-security
      namespace: traefik
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-clientauth
      namespace: traefik
